Spacing under staff type fix

--- a/rca/static_src/sass/components/_title-area.scss
+++ b/rca/static_src/sass/components/_title-area.scss
@@ -14,10 +14,6 @@
         margin-bottom: ($gutter / 2);
     }
 
-    &__sub-heading {
-        margin-bottom: ($gutter * 1.5);
-    }
-
     &__content {
         padding-top: ($gutter * 1.5);
         grid-column: 1 / span 2;
@@ -117,8 +113,18 @@
         }
 
         #{$root}__heading {
+            margin-bottom: ($gutter * 0.75);
+
             @include media-query(large) {
                 margin-bottom: ($gutter * 3);
+            }
+        }
+
+        #{$root}__sub-heading {
+            margin-bottom: ($gutter * 0.75);
+
+            @include media-query(large) {
+                margin-bottom: ($gutter * 1.5);
             }
         }
     }
